plugins {
    id 'java'
    id 'application'
}

group 'com.mku.salmon.vault'
version '3.0.1'

ext {
    junitVersion = '5.9.1'
    salmonLibVersion = '3.0.3'
}

sourceCompatibility = '11'
targetCompatibility = '11'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = 'com.mku.salmon.vault.main.Main'
}

import org.gradle.internal.os.OperatingSystem
OperatingSystem os = OperatingSystem.current();

println "OS: ${os.familyName}"
println "ARCH: ${System.getProperty("os.arch")}"

if (os.isLinux()) {
    project.ext.set('os', 'linux')
} else if (os.isWindows()) {
    project.ext.set('os', 'win')
} else if (os.isMacOsX()) {
    project.ext.set('os', 'macos')
}

if (System.getProperty("os.arch").equals("amd64") || System.getProperty("os.arch").equals("x86_64")) {
    project.ext.set('arch', 'x86_64')
} else if (System.getProperty("os.arch").equals("aarch64")) {
    project.ext.set('arch', 'aarch64')
}

project.ext.set('salmonLibsPath', '../../libs/salmon/')

repositories {
    // local repos, make sure you run samples/get_salmon_libs.bat
    maven {
        url uri(salmonLibsPath + "salmon-java")
    }
    maven {
        url uri(salmonLibsPath + "salmon-java-${project.os}-${project.arch}")
    }
    mavenCentral()
}

// path to download the native libraries
project.ext.set('nativeLibsDir', "$buildDir/libs/natives")

sourceSets {
    main {
        java {
            main.java.srcDirs += '../src'
            main.java.srcDirs += '../../java-common/src'
            main.java.srcDirs += '../../java-win-common/src'
        }
    }
    main.resources.srcDirs += '../res'
    main.resources.srcDirs += '../../common/common-res'
}

// unzipping the native library
configurations {
    nativeImplementation
}
task unzipNative(type: Sync) {
    from {
        configurations.nativeImplementation.collect { zipTree(it) }
    }
    into file(project.nativeLibsDir)
}
build.dependsOn unzipNative
classes.dependsOn unzipNative

dependencies {

    // salmon libs:
    implementation("com.mku.salmon:salmon-core:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-fs:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-win:${salmonLibVersion}")
    implementation("com.mku.salmon:salmon-native:${salmonLibVersion}:${project.os}-${project.arch}")
    nativeImplementation("com.mku.salmon:salmon-native:${salmonLibVersion}:${project.os}-${project.arch}")

    implementation 'net.java.dev.jna:jna:5.13.0'

    implementation 'com.github.pcorless.icepdf:icepdf-core:7.2.4_P01'
    implementation 'com.github.pcorless.icepdf:icepdf-viewer:7.2.4_P01'

    implementation 'org.jcodec:jcodec:0.2.5'
    implementation 'org.jcodec:jcodec-javase:0.2.5'

    implementation("org.openjfx:javafx-base:17.0.15:${project.os}")
    implementation("org.openjfx:javafx-graphics:17.0.15:${project.os}")
    implementation("org.openjfx:javafx-media:17.0.15:${project.os}")
    implementation("org.openjfx:javafx-web:17.0.15:${project.os}")
    implementation("org.openjfx:javafx-fxml:17.0.15:${project.os}")
    implementation("org.openjfx:javafx-swing:17.0.15:${project.os}")
    implementation("org.openjfx:javafx-controls:17.0.15:${project.os}")

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}

ext {
    javaMainClass = "com.mku.salmon.vault.main.Main"
    // change this to the javafx lib path
    javaFxModules = "./libs/javafx"
    salmonLibs = "./libs/salmon"
    libs = "./libs/libs"
}

task copyDependencies(type: Copy) {
    from(configurations.default) {
        exclude("javafx*.jar")
        exclude("salmon*.jar")
    }
    into 'libs/libs'
}
build.dependsOn copyDependencies

task copySalmonDependencies(type: Copy) {
    from(configurations.default) {
        include("salmon*.jar")
    }
    into 'libs/salmon'
}
build.dependsOn copySalmonDependencies

task copyJavaFxDependencies(type: Copy) {
    from(configurations.default) {
        include("javafx*.jar")
    }
    into 'libs/javafx'
}
build.dependsOn copyJavaFxDependencies

run {
    group = "application"
    description = "Run the application"
    classpath = sourceSets.main.runtimeClasspath
    main = javaMainClass
    systemProperty "java.library.path", "build/libs/natives/lib"
    jvmArgs = ["--module-path", javaFxModules,
               "--add-modules=javafx.controls,javafx.swing,javafx.fxml,javafx.media,javafx.graphics,javafx.web"
    ]
}
run.dependsOn build

distZip.enabled = false
distTar.enabled = false
installDist.enabled = false
assembleDist.enabled = false
